{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 599,
  "lineage": "495a0811-f6b9-e9bc-5cd8-232cff26c90c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:security-group/sg-0f6e644bdd7b5e285",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6e644bdd7b5e285",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Only allow http 80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cms-sg-ecs-service",
            "name_prefix": "",
            "owner_id": "718286959245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cms-sg-ecs-service"
            },
            "tags_all": {
              "Name": "cms-sg-ecs-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_vpn_gateway_route_propagation.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:security-group/sg-027fa1195c83b63bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027fa1195c83b63bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Only allow cms-vpc cidr",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cms-sg-endpoint",
            "name_prefix": "",
            "owner_id": "718286959245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cms-sg-endpoint"
            },
            "tags_all": {
              "Name": "cms-sg-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_subnet.intra",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.elasticache"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc/vpc-068a7b6b25bf2c661",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0706c6ca493d34278",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0ff03709bb0b71417",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068a7b6b25bf2c661",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00bf0e51bb7a01447",
            "owner_id": "718286959245",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:loadbalancer/app/tf-lb-20211027083636768500000002/f3875a7c1ffad954",
            "arn_suffix": "app/tf-lb-20211027083636768500000002/f3875a7c1ffad954",
            "dns_name": "tf-lb-20211027083636768500000002-509948876.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:loadbalancer/app/tf-lb-20211027083636768500000002/f3875a7c1ffad954",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20211027083636768500000002",
            "security_groups": [
              "sg-0f0b63aa5760ad672"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c0381e5e01e1c8a2"
              },
              {
                "subnet_id": "subnet-0d7603d0148f8fd57"
              }
            ],
            "subnets": [
              "subnet-0c0381e5e01e1c8a2",
              "subnet-0d7603d0148f8fd57"
            ],
            "tags": {
              "Component": "cms",
              "DeploymentIdentifier": "production",
              "Name": "cms-production"
            },
            "tags_all": {
              "Component": "cms",
              "DeploymentIdentifier": "production",
              "Name": "cms-production"
            },
            "vpc_id": "vpc-068a7b6b25bf2c661",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.redshift",
            "module.alb.aws_security_group.default",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route_table_association.elasticache",
            "module.alb.data.aws_vpc.vpc",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_default_network_acl.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cms-lb-listeners",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:listener/app/tf-lb-20211027083636768500000002/f3875a7c1ffad954/48abd55bad84aed8",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:targetgroup/tf-20211027084003412800000003/3e23d1263280c816",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:listener/app/tf-lb-20211027083636768500000002/f3875a7c1ffad954/48abd55bad84aed8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:loadbalancer/app/tf-lb-20211027083636768500000002/f3875a7c1ffad954",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.alb.aws_lb.load_balancer",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route_table.intra",
            "module.alb.data.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.alb.aws_lb_target_group.target_group",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.alb.aws_security_group.default",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cms-lb-target-group",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:targetgroup/tf-20211027084003412800000003/3e23d1263280c816",
            "arn_suffix": "targetgroup/tf-20211027084003412800000003/3e23d1263280c816",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 25,
                "matcher": "200",
                "path": "/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:718286959245:targetgroup/tf-20211027084003412800000003/3e23d1263280c816",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20211027084003412800000003",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "cms",
              "DeploymentIdentifier": "production",
              "Name": "cms-production-80-HTTP"
            },
            "tags_all": {
              "Component": "cms",
              "DeploymentIdentifier": "production",
              "Name": "cms-production-80-HTTP"
            },
            "target_type": "ip",
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.alb.data.aws_vpc.vpc",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table.intra",
            "module.alb.aws_lb.load_balancer",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route_table.database",
            "module.alb.aws_security_group.default",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:security-group/sg-0f0b63aa5760ad672",
            "description": "ALB security group for: cms, deployment: production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0f0b63aa5760ad672",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cms-production",
            "name_prefix": "",
            "owner_id": "718286959245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cms",
              "DeploymentIdentifier": "production",
              "Name": "cms-production"
            },
            "tags_all": {
              "Component": "cms",
              "DeploymentIdentifier": "production",
              "Name": "cms-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.database",
            "module.alb.data.aws_vpc.vpc",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2299601389",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0b63aa5760ad672",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_subnet.public",
            "module.alb.data.aws_vpc.vpc",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_vpn_gateway.this",
            "module.alb.aws_security_group.default",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_default_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cms-lb-listeners",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1431343690",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0b63aa5760ad672",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.alb.aws_security_group.default",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.outpost",
            "module.alb.data.aws_vpc.vpc",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_network_acl.private"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc-endpoint/vpce-0d4cdd6d52b59cbd5",
            "dns_entry": [
              {
                "dns_name": "vpce-0d4cdd6d52b59cbd5-g3og65vk.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d4cdd6d52b59cbd5-g3og65vk-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d4cdd6d52b59cbd5-g3og65vk-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z10411901I0CUBB0MKAEF"
              }
            ],
            "id": "vpce-0d4cdd6d52b59cbd5",
            "network_interface_ids": [
              "eni-048ea463f49fc1418",
              "eni-0cc70d15df9a5581e"
            ],
            "owner_id": "718286959245",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-027fa1195c83b63bd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0258b9f9e472dd47f",
              "subnet-07c9d129f3316bf5f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ap-northeast-1-ecr-api"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ap-northeast-1-ecr-api"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.public",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "aws_security_group.sg_endpoint",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc-endpoint/vpce-09847224d95f70f94",
            "dns_entry": [
              {
                "dns_name": "vpce-09847224d95f70f94-wlip73kq.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09847224d95f70f94-wlip73kq-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09847224d95f70f94-wlip73kq-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z03274391YUV1ITWDGJJB"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z03274391YUV1ITWDGJJB"
              }
            ],
            "id": "vpce-09847224d95f70f94",
            "network_interface_ids": [
              "eni-04ce3af90fb517818",
              "eni-0c9c2f7166321439f"
            ],
            "owner_id": "718286959245",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-027fa1195c83b63bd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0258b9f9e472dd47f",
              "subnet-07c9d129f3316bf5f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ap-northeast-1-ecr-dkr"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ap-northeast-1-ecr-dkr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "aws_security_group.sg_endpoint",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_default_network_acl.this"
          ]
        },
        {
          "index_key": "lambda",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc-endpoint/vpce-0c7afbcffb71b1ba2",
            "dns_entry": [
              {
                "dns_name": "vpce-0c7afbcffb71b1ba2-j5ly53gf.lambda.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c7afbcffb71b1ba2-j5ly53gf-ap-northeast-1a.lambda.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c7afbcffb71b1ba2-j5ly53gf-ap-northeast-1c.lambda.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "lambda.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04072892MP7CNN8XUU7"
              }
            ],
            "id": "vpce-0c7afbcffb71b1ba2",
            "network_interface_ids": [
              "eni-084662dec196e14d7",
              "eni-08ada71661939ab9c"
            ],
            "owner_id": "718286959245",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-027fa1195c83b63bd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-0258b9f9e472dd47f",
              "subnet-07c9d129f3316bf5f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ap-northeast-1-lambda"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ap-northeast-1-lambda"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "aws_security_group.sg_endpoint",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.redshift"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc-endpoint/vpce-01e2c6a5d785e4a94",
            "dns_entry": [
              {
                "dns_name": "vpce-01e2c6a5d785e4a94-cbs61wrq.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01e2c6a5d785e4a94-cbs61wrq-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01e2c6a5d785e4a94-cbs61wrq-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z03196432A7LDG09OEYON"
              }
            ],
            "id": "vpce-01e2c6a5d785e4a94",
            "network_interface_ids": [
              "eni-043062de216c815bf",
              "eni-099c571341d40ab06"
            ],
            "owner_id": "718286959245",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-027fa1195c83b63bd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0258b9f9e472dd47f",
              "subnet-07c9d129f3316bf5f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ap-northeast-1-logs"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ap-northeast-1-logs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "aws_security_group.sg_endpoint",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_route.private_ipv6_egress"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc-endpoint/vpce-09863d3cb493708ca",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.0.0/20",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-09863d3cb493708ca",
            "owner_id": "718286959245",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0401892c6d4859da9",
              "rtb-07243699876435fff"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "ap-northeast-1-s3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ap-northeast-1-s3"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "aws_security_group.sg_endpoint",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:internet-gateway/igw-0f4f7bb84da995a0a",
            "id": "igw-0f4f7bb84da995a0a",
            "owner_id": "718286959245",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f4f7bb84da995a0a",
            "id": "r-rtb-0846e5a948fb131601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0846e5a948fb13160",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:route-table/rtb-0401892c6d4859da9",
            "id": "rtb-0401892c6d4859da9",
            "owner_id": "718286959245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:route-table/rtb-07243699876435fff",
            "id": "rtb-07243699876435fff",
            "owner_id": "718286959245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:route-table/rtb-0846e5a948fb13160",
            "id": "rtb-0846e5a948fb13160",
            "owner_id": "718286959245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4f7bb84da995a0a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-public-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-public-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a64cf5699ffe5db6",
            "route_table_id": "rtb-0401892c6d4859da9",
            "subnet_id": "subnet-07c9d129f3316bf5f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09caa7a6f2d6adf96",
            "route_table_id": "rtb-07243699876435fff",
            "subnet_id": "subnet-0258b9f9e472dd47f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002271c5bfcf4bd31",
            "route_table_id": "rtb-0846e5a948fb13160",
            "subnet_id": "subnet-0c0381e5e01e1c8a2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccdd36300b09e03c",
            "route_table_id": "rtb-0846e5a948fb13160",
            "subnet_id": "subnet-0d7603d0148f8fd57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:subnet/subnet-07c9d129f3316bf5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07c9d129f3316bf5f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718286959245",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:subnet/subnet-0258b9f9e472dd47f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0258b9f9e472dd47f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718286959245",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:subnet/subnet-0c0381e5e01e1c8a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0c0381e5e01e1c8a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718286959245",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:subnet/subnet-0d7603d0148f8fd57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0d7603d0148f8fd57",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718286959245",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc-public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-068a7b6b25bf2c661"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:718286959245:vpc/vpc-068a7b6b25bf2c661",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e3fd500c10e3b09",
            "default_route_table_id": "rtb-00bf0e51bb7a01447",
            "default_security_group_id": "sg-06d9a00fe2ff63d02",
            "dhcp_options_id": "dopt-0ff03709bb0b71417",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068a7b6b25bf2c661",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00bf0e51bb7a01447",
            "owner_id": "718286959245",
            "tags": {
              "Environment": "dev",
              "Name": "cms-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cms-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}